Move hadoop changes from sprint-25-6.2.0